--- a/Templates/formulaire.html
+++ b/Templates/formulaire.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Registration Form</title>
-	<link rel="stylesheet" type="text/css" href="../ressources/formulaire.css">
+    <title>Registration Form</title>
+    <link rel="stylesheet" type="text/css" href="../ressources/formulaire.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <nav class="navbar">
@@ -18,25 +20,36 @@
             </ul>
         </nav>
     </header>
-	<div class="container">
+    <div class="container">
         <div class="contact-box">
             <div class="gauche"></div>
             <div class="droite">
                 <h2>Ajoutez vos Compétences</h2>
-                <input type="text" class="field" placeholder="Nom">
-                <input type="text" class="field" placeholder="Prénoms">
-                <input type="text" class="field" placeholder="Profession">
-                <input type="email" class="field" placeholder="Email">
-                <textarea class="field area" placeholder="Ajouter Vos Compétences"></textarea>
-                <form class="form">
-                  <div class="file-upload-wrapper" data-text="Selectionner votre fichier!">
-                    <input name="file-upload-field" type="file" class="file-upload-field" value="">
-                  </div>
+                <form method="POST" action="/enregistrer">
+                    <input type="text" class="field" placeholder="nom" name="nom">
+                    <input type="text" class="field" placeholder="Prenoms" name="prenom">
+                    <input type="number" class="field" placeholder="age" name="age">
+                    <input type="text" class="field" placeholder="Profession" name="profession">
+                    <input type="email" class="field" placeholder="Email" name="email">
+                    <input type="text" class="field" placeholder="contact" name="contact">
+                
+                    <textarea class="field area" placeholder="A propos de moi" name="competence"></textarea>
+                    <label for="favcolor">Partager un PDF:</label>
+                    <div class="file-upload-wrapper" data-text="uploder votre fichier!">
+                        <input name="file-upload-field" type="file" class="file-upload-field" value="">
+                    </div>
+                    <label for="favcolor">Partager une video:</label>
+                    <div class="file-upload-wrapper" data-text="uploder votre fichier!">
+                        <input name="file-upload-field" type="file" class="file-upload-field" value="">
+                    </div>
 
-                <button class="btn">Enregistrer les informations</button>
+                    <button class="btn">Enregistrer les informations</button>
+
+                </form>
             </div>
         </div>
     </div>
-  
+
 </body>
+
 </html>
