--- a/Templates/index.html
+++ b/Templates/index.html
@@ -58,9 +58,64 @@
             </div>
         </div>
     </section>
+    <section class="section3">
+        <h1 id="tle"> Témoignages Inspirants Des Femmes</h1>
+        <div class="sectiondiv">
+            <div class="bloc"> 
+                <img src="ressources/new.jpg"id="img1" alt="">
+                <h3 id="titre" >Kone adi,developpeuse</h3>
+                <div class="p">
+                    <p >
+                        Les témoignages sont de courtes citations
+                        de personnes qui aiment votre marque.
+                        C'est une façon de convaincre les clients 
+                        d'essayer vos services.
+                    </p>
+                </div>
+                    
+            </div>
+            
+            <div class="bloc">
+                <img src="ressources/new.jpg" id="img1" alt="">
+                <h3 id="titre"> Kouakou makissi,developpeuse</h3>
+                <div class="p">
+                    <p >
+                        Les témoignages sont de courtes citations
+                        de personnes qui aiment votre marque.
+                        C'est une façon de convaincre les clients 
+                        d'essayer vos services.
+                    </p>
+                </div>
+            </div>
 
+            <div class="bloc">
+                <img src="ressources/new.jpg" id="img1" alt="">
+                <h3 id="titre"> Kouakou makissi,scientist</h3>
+                <div class="p">
+                    <p >
+                        Les témoignages sont de courtes citations
+                        de personnes qui aiment votre marque.
+                        C'est une façon de convaincre les clients 
+                        d'essayer vos services.
+                    </p>
+                </div>
+            </div>
+
+            <div class="bloc">
+                <img src="ressources/new.jpg" id="img1" alt="">
+                <h3 id="titre"> Kouakou makissi,scientist</h3>
+                <div class="p">
+                    <p >
+                        Les témoignages sont de courtes citations
+                        de personnes qui aiment votre marque.
+                        C'est une façon de convaincre les clients 
+                        d'essayer vos services.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer>
-
     </footer>
 </body>
 
